# task-forge

./: README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/tasks_forge/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
backend/user/tests/: fixtures.json  tests_authentication.py  tests_user.py
