[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SliadnievDanil <sladnevdanil78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
